<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidStorageApp</string>
    <string name="action_settings">Settings</string>
    <string name="sjsu_icon_desc">SJSU</string>
    <string name="first_title">Android Data Storage Sample</string>
    <string name="preferences">Preferences</string>
    <string name="sqllite">SQL Lite</string>
    <string name="close_button">Close</string>
    
    <string name="show_status">Status</string>
    
    <string name="title_activity_sql">SqlActivity</string>
    <string name="save_sql">Save</string>
    
    <string name="hello_worldpreferences"> Preferences Section</string>
    <string name="save_preference">Save</string>
    
    <string name="blog_hint">Max 255 character only.</string>
    <string name="blog_message">Blog Message</string>
    
    <string name="title_activity_preferences">PreferencesActivity</string>
    
    <string name="book_name">Android Book Name</string>
    <string name="book_name_hint">Enter the name of the book</string>
    
    <string name="book_author">Android Book Author</string>
    <string name="book_author_hint"> Max. 70 characters</string>
    
    <string name="book_description">Description</string>
    <string name="book_description_hint">Max 255 character only.</string>

</resources>
