<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 	android:orientation="vertical"
    tools:context="com.niti.androidstorageapp.PreferencesActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/book_name" />
        
        <EditText
            android:id="@+id/bookname_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/book_name_hint"
            android:ems="10" ></EditText>      
     </LinearLayout>
     
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/book_author" />
        
        <EditText
            android:id="@+id/bookauthor_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/book_author_hint"
            android:ems="10" ></EditText>      
     </LinearLayout>
     
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/book_description" />
        
        <EditText
            android:id="@+id/book_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/book_description_hint"
            android:ems="10" ></EditText>      
     </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="@string/save_preference" />
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close_preference"
        android:text="@string/close_button"/>
    
    </LinearLayout>
</LinearLayout>
